[package]
name = "my-vmm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
ctrlc = { version = "3.5.2", features = ["termination"] }
kvm-bindings = "0.14.1"
kvm-ioctls = "0.25.0"
libc = "0.2.186"
linux-loader = "0.14.0"
vm-memory = { version = "0.18.0", features = ["backend-mmap"] }
vm-superio = "0.8.1"
vmm-sys-util = "0.15.0"
